# mc-quarry

./: .gitignore  AGENTS.md  LICENSE  MODS_INFO.md  README.md  clean_config.py  config.json  config_clean.json  main.py  pyproject.toml  requirements.txt  web_interface.py
.github/workflows/: ci.yml
mc_quarry/: 1.ui_manager.py  __init__.py  api_client.py  config_manager.py  constants.py  downloader.py  exceptions.py  processor.py  translations.py  ui_manager.py  utils.py
mc_quarry/web/static/css/: style.css
mc_quarry/web/static/js/: app.js  icons.js
mc_quarry/web/templates/: index.html
modpack/: README.md
scripts/: analyze_apis.py  analyze_conflicts.py  analyze_mods.py  check_duplicates.py  clean_config.py  extract_installed_mods.py  run_all.py  test_connection.py  test_hardware.py  validate_config.py
tests/: conftest.py  test_api_client.py  test_config_manager.py  test_downloader.py  test_processor.py  test_ui_manager.py  test_utils.py
